--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "confronto-distinte-base-(bom)-rev_4",
+  "name": "confronto-distinte-base-(bom)-rev_5-associa-colonne",
   "private": true,
   "version": "0.0.0",
   "type": "module",
