--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "confronto-distinte-base-(bom)-rev_6-filtri-su-riquadri",
+  "name": "confronto-distinte-base-(bom)-rev_8_regole_quantità_diverse_ok",
   "private": true,
   "version": "0.0.0",
   "type": "module",
