--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "distinte-base-(bom)-rev_11_solo-modalita-aggregata_info-su-pulsanti",
+  "name": "distinte-base-(bom)-rev_12_mod_federico",
   "private": true,
   "version": "0.0.0",
   "type": "module",
