--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "distinte-base-(bom)-rev_12_mod_federico",
+  "name": "distinte-base-(bom)-rev_13_mod_federico_regola_ragruppa_codici",
   "private": true,
   "version": "0.0.0",
   "type": "module",
